adjust for java 8